Feat: Modificacion a Notebook
Se trabaja  en el morfologico, se completa graficos y se ejecuta con el nuevo corpus

--- a/notebooks/01_exploracion_datos.ipynb
+++ b/notebooks/01_exploracion_datos.ipynb
@@ -7928,8 +7928,108 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-17T07:37:13.523692200Z",
-     "start_time": "2026-02-17T07:37:13.421755600Z"
+     "end_time": "2026-02-17T08:55:48.094540200Z",
+     "start_time": "2026-02-17T08:55:47.861477400Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df_unificado[df_unificado['Year'] == 1.0]",
+   "id": "f518189a7973804f",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "             Artist                     nombre_cancion  \\\n",
+       "3040  Justin Bieber  Holy Covered by Christian Lamanna   \n",
+       "3619      Lady Gaga                         Devastated   \n",
+       "3690      Lady Gaga                     New York Girls   \n",
+       "\n",
+       "                                          letra_cancion  Periodo Genero  \n",
+       "3040                                             lyrics      1.0    pop  \n",
+       "3619                                               soon      1.0    pop  \n",
+       "3690  i'm just an ordinary superstar so far but alwa...      1.0    pop  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Artist</th>\n",
+       "      <th>nombre_cancion</th>\n",
+       "      <th>letra_cancion</th>\n",
+       "      <th>Periodo</th>\n",
+       "      <th>Genero</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3040</th>\n",
+       "      <td>Justin Bieber</td>\n",
+       "      <td>Holy Covered by Christian Lamanna</td>\n",
+       "      <td>lyrics</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>pop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3619</th>\n",
+       "      <td>Lady Gaga</td>\n",
+       "      <td>Devastated</td>\n",
+       "      <td>soon</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>pop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3690</th>\n",
+       "      <td>Lady Gaga</td>\n",
+       "      <td>New York Girls</td>\n",
+       "      <td>i'm just an ordinary superstar so far but alwa...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>pop</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 33
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-17T08:57:28.396253400Z",
+     "start_time": "2026-02-17T08:57:28.219536Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df_unificado = df_unificado[df_unificado['Year'] != 1.0]",
+   "id": "70b66a90d97025c2",
+   "outputs": [],
+   "execution_count": 34
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-17T08:57:29.963043Z",
+     "start_time": "2026-02-17T08:57:29.915273900Z"
     }
    },
    "cell_type": "code",
@@ -7941,20 +8041,21 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.DataFrame'>\n",
-      "Index: 5208 entries, 0 to 6026\n",
-      "Data columns (total 4 columns):\n",
-      " #   Column  Non-Null Count  Dtype  \n",
-      "---  ------  --------------  -----  \n",
-      " 0   Artist  5208 non-null   str    \n",
-      " 1   Title   5208 non-null   str    \n",
-      " 2   Lyric   5208 non-null   str    \n",
-      " 3   Year    5208 non-null   float64\n",
-      "dtypes: float64(1), str(3)\n",
+      "Index: 5205 entries, 0 to 5207\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   Artist          5205 non-null   str    \n",
+      " 1   nombre_cancion  5205 non-null   str    \n",
+      " 2   letra_cancion   5205 non-null   str    \n",
+      " 3   Periodo         5205 non-null   float64\n",
+      " 4   Genero          5205 non-null   str    \n",
+      "dtypes: float64(1), str(4)\n",
       "memory usage: 10.3 MB\n"
      ]
     }
    ],
-   "execution_count": 23
+   "execution_count": 35
   },
   {
    "metadata": {},
@@ -7965,8 +8066,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-17T07:37:33.606822500Z",
-     "start_time": "2026-02-17T07:37:33.531536Z"
+     "end_time": "2026-02-17T08:58:00.421285Z",
+     "start_time": "2026-02-17T08:58:00.293378Z"
     }
    },
    "cell_type": "code",
@@ -7979,12 +8080,12 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 24
+   "execution_count": 36
   },
   {
    "metadata": {},
@@ -8683,15 +8784,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-17T07:53:51.777013100Z",
-     "start_time": "2026-02-17T07:53:51.489761Z"
+     "end_time": "2026-02-17T08:58:19.901771200Z",
+     "start_time": "2026-02-17T08:58:19.612162300Z"
     }
    },
    "cell_type": "code",
    "source": "df_unificado.to_csv(directorio_proyecto+'\\\\data\\\\processed\\\\corpus_canciones.csv', index=False)",
    "id": "1a798bc44165f1fe",
    "outputs": [],
-   "execution_count": 32
+   "execution_count": 37
   }
  ],
  "metadata": {
